syntax = "proto3";

package types;

option go_package = "github.com/iotexproject/ioTube/witness-service/grpc/types";

import "google/protobuf/timestamp.proto";

message Transfer {
    bytes cashier = 1;
    bytes token = 2;
    int64 index = 3;
    bytes sender = 4;
    bytes recipient = 5;
    string amount = 6;
    google.protobuf.Timestamp timestamp = 7;
    uint64 gas = 8;
    string gasPrice = 9;
    string fee = 10;
    bytes txSender = 11;
    bytes payload = 12;
}

message Witness {
    Transfer transfer = 1;
    bytes address = 2;
    bytes signature = 3;
}